--- a/src/index.css
+++ b/src/index.css
@@ -28,32 +28,8 @@
   height: 36px;
   border-radius: 50%;
   border: 3px solid;
-  border-color: rgb(225, 255, 0) transparent;
+  border-color: rgb(255, 217, 0) transparent;
 }
-.loaderOrange {
-  width: 32px;
-  height: 32px;
-  border: 3px solid #fff;
-  border-radius: 50%;
-  display: inline-block;
-  position: relative;
-  box-sizing: border-box;
-  animation: rotation 1s linear infinite;
-}
-.loaderOrange::after {
-  content: "";
-  box-sizing: border-box;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  border: 3px solid;
-  border-color: rgb(255, 145, 0) transparent;
-}
-
 @keyframes rotation {
   0% {
     transform: rotate(0deg);
@@ -76,7 +52,7 @@ ol {
 
 /* Customize the thumb of both horizontal and vertical scrollbars */
 ::-webkit-scrollbar-thumb {
-  background-color: rgb(233, 134, 35);
+  background-color: rgb(239 68 68);
   border-radius: 9999px;
   border: 1px solid rgba(255, 255, 255, 0.5);
 }
