--- a/src/index.css
+++ b/src/index.css
@@ -108,3 +108,6 @@ ol {
   animation-duration: 2s; /* Adjust the duration as needed */
   animation-timing-function: ease-in-out; /* Adjust the timing function as desired */
 }
+.text-stroke {
+  -webkit-text-stroke: 1px black;
+}
