--- a/src/index.css
+++ b/src/index.css
@@ -116,7 +116,7 @@ ol {
   display: block;
   position: absolute;
 
-  right: -23px;
+  right: -24px;
   top: 15px;
 
   width: 0px;
@@ -124,7 +124,8 @@ ol {
 
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
-  border-left: 24px solid #ffff99;
+  border-left: 24px solid #000;
+  z-index: 0;
 }
 #speech-bubble-right-bottom::after {
   content: "";
@@ -139,7 +140,7 @@ ol {
 
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
-  border-left: 24px solid #ffff99;
+  border-left: 24px solid #000;
 }
 #speech-bubble-left-top::after {
   content: "";
@@ -154,7 +155,7 @@ ol {
 
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
-  border-right: 24px solid #ffff99;
+  border-right: 24px solid #000;
 }
 #speech-bubble-left-bottom::after {
   content: "";
@@ -169,7 +170,7 @@ ol {
 
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
-  border-right: 24px solid #ffff99;
+  border-right: 24px solid #000;
 }
 #speech-bubble-bottom-left::after {
   content: "";
@@ -177,14 +178,14 @@ ol {
   position: absolute;
 
   left: 27px;
-  bottom: -23px;
+  bottom: -24px;
 
   width: 0px;
   height: 0px;
 
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-top: 24px solid #ffff99;
+  border-top: 24px solid #000;
 }
 #speech-bubble-bottom-right::after {
   content: "";
@@ -199,7 +200,7 @@ ol {
 
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-top: 24px solid #ffff99;
+  border-top: 24px solid #000;
 }
 #speech-bubble-top-right::after {
   content: "";
@@ -207,14 +208,14 @@ ol {
   position: absolute;
 
   right: 27px;
-  top: -23px;
+  top: -24px;
 
   width: 0px;
   height: 0px;
 
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-bottom: 24px solid #ffff99;
+  border-bottom: 24px solid #000;
 }
 #speech-bubble-top-left::after {
   content: "";
@@ -229,5 +230,5 @@ ol {
 
   border-left: 10px solid transparent;
   border-right: 10px solid transparent;
-  border-bottom: 24px solid #ffff99;
+  border-bottom: 24px solid #000;
 }
